<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.ui.representative.viewmodel.RepresentativeViewModel" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/fragment_representative_scene">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header_layout"
            android:layout_width="@dimen/space_x0"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.core.widget.ContentLoadingProgressBar
                android:id="@+id/loading_progress_bar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="@dimen/space_x0"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/search_title"
                style="@style/TitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/representative_search"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/address_line_1"
                style="@style/CustomEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address_line_1"
                android:importantForAutofill="no"
                android:inputType="textPostalAddress"
                android:minHeight="48dp"
                android:text="@={viewModel.addressFilter.line1}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_title" />

            <EditText
                android:id="@+id/address_line_2"
                style="@style/CustomEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:hint="@string/address_line_2"
                android:importantForAutofill="no"
                android:inputType="textPostalAddress"
                android:minHeight="48dp"
                android:text="@={viewModel.addressFilter.line2}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/address_line_1" />

            <EditText
                android:id="@+id/city"
                style="@style/CustomEditTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/city"
                android:importantForAutofill="no"
                android:inputType="textPostalAddress"
                android:minHeight="48dp"
                android:text="@={viewModel.addressFilter.city}"
                app:layout_constraintEnd_toStartOf="@id/state"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/address_line_2" />

            <Spinner
                android:id="@+id/state"
                stateValue="@{viewModel.addressFilter.state}"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:entries="@array/states"
                android:inputType="textPostalAddress"
                app:layout_constraintBottom_toBottomOf="@id/city"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/city"
                app:layout_constraintTop_toTopOf="@id/city"
                style="@style/CustomSpinnerStyle" />

            <EditText
                android:id="@+id/zip"
                style="@style/CustomEditTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/zip"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="5"
                android:minHeight="48dp"
                android:text="@={viewModel.addressFilter.zip}"
                app:layout_constraintEnd_toEndOf="@id/city"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/city" />

            <Button
                android:id="@+id/button_search"
                style="@style/PrimaryButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/find_my_representatives"
                app:layout_constraintTop_toBottomOf="@id/zip" />

            <Button
                android:id="@+id/button_location"
                style="@style/PrimaryButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_x1"
                android:text="@string/use_my_location"
                app:layout_constraintTop_toBottomOf="@id/button_search" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/list_layout"
            android:layout_width="@dimen/space_x0"
            android:layout_height="@dimen/space_x0"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_layout">

            <TextView
                android:id="@+id/representative_title"
                style="@style/TitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_representatives" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/representative_recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>